force-app/main/default/objects/Dealership_Location__c/Dealership_Location__c.object-meta.xml
<CustomObject>
    <label>Dealership Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealership Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>