force-app/main/default/objects/Dealership_Location__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealership Locations</relationshipLabel>
    <relationshipName>Dealership_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>