force-app/main/default/objects/Dealership_Location__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <externalId>true</externalId>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>