force-app/main/default/objects/Dealership_Location__c/fields/Zip_Codes_Served__c.field-meta.xml
<CustomField>
    <fullName>Zip_Codes_Served__c</fullName>
    <label>Zip Codes Served</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>