force-app/main/default/objects/Dealership_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealer_Account__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Phone__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Dealership Locations</label>
</ListView>